# UniversityProjects

./: README.md
Semester1/Programming Fundamentals/A1/: p1.py  p2.py  p3.py
Semester1/Programming Fundamentals/A11/: main.py
Semester1/Programming Fundamentals/A678/: README.md
Semester2/Graph Algorithms/LAB1/: graph1.txt
Semester2/Object Oriented Programming/A1/: CMakeLists.txt  source.c  (+1 more)
Semester3/Statistics/: lab 6.txt  lab1.txt  lab2.txt  lab2a.m  lab2ainput.m  lab2amatrix.m  lab2cde.m  lab2cdf.m  lab2f.m  lab3.txt  lab31a.m  lab32a.m  lab32b.m  lab42a.m  lab42b.m  lab42c.m  lab42d.m  lab51.m  lab52.m  lab61.m  lab61b.m  lab62am.m
Semester5/Formal Languages and Compiler Design/Parser/: CMakeLists.txt  CanonicalCollection.cpp  CanonicalCollection.h  Grammar.cpp  Grammar.h  LR0.cpp  LR0.h  PIF.out  ParseOutput.cpp  ParseOutput.h  Production.cpp  Production.h  Utils.cpp  Utils.h  classDiagram.puml  g1.txt  g2.txt  main.cpp  out1.txt  out2.txt
Semester5/Formal Languages and Compiler Design/Scanner/lab2/: CMakeLists.txt  ClassDiagram.puml  FA.in  IdentifierFA.in  IntegerFA.in  PIF.out  ST.out  ST1.out  main.cpp  paux.txt
Semester5/Formal Languages and Compiler Design/Scanner/lab2/FiniteAutomata/: FiniteAutomaton.cpp  FiniteAutomaton.h
Semester5/Formal Languages and Compiler Design/Scanner/lab2/HashTable/: HashTable.h
Semester5/Formal Languages and Compiler Design/Scanner/lab2/Scanner/: Scanner.cpp  Scanner.h
Semester5/Formal Languages and Compiler Design/Scanner/lab2/SymbolTable/: SymbolTable.cpp  SymbolTable.h
Semester5/Mobile Applications/: README.md
(+1018 files in other folders)
